--- a/src/app/imprint/imprint.component.html
+++ b/src/app/imprint/imprint.component.html
@@ -1,7 +1,7 @@
 
 <div class="imprint-main">
     <div id='generator_results'>
-        <div id='generator_results_content'>
+        <div class="imprint-text" id='generator_results_content'>
         <h1>Impressum</h1>
         <h2>Verantwortliche(r)</h2>
         <p class='generator_user_input'>Niklas Lampe</p>
