--- a/src/app/imprint/imprint.component.scss
+++ b/src/app/imprint/imprint.component.scss
@@ -1,6 +1,6 @@
 .imprint-main{
     width: 100%;
-    height: 80vh;
+    height: auto;
     max-width: 1259px;
     padding-top: 100px;
     padding-bottom: 100px;
@@ -16,3 +16,20 @@
 h1, h2, h3{
     font-family: 'syne800';
 }
+
+
+@media (max-width: 400px) {
+    .imprint-main{
+        max-width: 320px;
+    }
+
+    .imprint-text{
+        max-width: 320px;
+    }
+
+    h1, h2, h3{
+        font-size: 20px;
+    }
+    
+  }
+  
