--- a/src/app/privacy/privacy.component.scss
+++ b/src/app/privacy/privacy.component.scss
@@ -15,3 +15,43 @@
 h1, h2, h3{
     font-family: 'syne800';
 }
+
+@media (max-width: 600px) {
+    .privacy-main{
+        max-width: 400px;
+    }
+
+    .privacy-text{
+        max-width: 400px;
+        >p{
+            >a{
+                max-width: 400px;
+                display: block; 
+                word-wrap: break-word; 
+                overflow-wrap: break-word;
+            }
+        }
+    }
+
+    h1, h2, h3{
+        font-size: 18px;
+    }
+  }
+
+@media (max-width: 420px) {
+    .privacy-main{
+        max-width: 300px;
+    }
+
+    .privacy-text{
+        max-width: 300px;
+        >a{
+            max-width: 300px;
+        }
+    }
+
+    h1, h2, h3{
+        font-size: 16px;
+    }
+    
+  }
