--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -81,7 +81,7 @@
         <p>
           {{ privacyTextParts.one }}
           <a
-            [href]="getImprintUrl()"
+            href="/privacy"
             target="_blank"
             rel="noopener noreferrer"
             >{{ privacyTextParts.policy }}</a
