set up translation for privacy and imprint, some fixes for contact form

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -69,7 +69,9 @@
           {{ errorMessages.minLength }}
         </p>
       </div>
-
+      <div *ngIf="successMessage" class="success-message">
+        <p>{{ successMessage }}</p>
+      </div>      
       <div class="check-div">
         <input
           class="checkbox"
