--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -66,6 +66,7 @@ p {
   position: relative;
   text-decoration: none;
   color: #fffcf3;
+  cursor: pointer;
   &:hover {
     font-weight: bold;
   }
