--- a/src/app/imprint/imprint.component.html
+++ b/src/app/imprint/imprint.component.html
@@ -1,21 +1,19 @@
-
 <div class="imprint-main">
     <div id='generator_results'>
         <div class="imprint-text" id='generator_results_content'>
-        <h1>Impressum</h1>
-        <h2>Verantwortliche(r)</h2>
-        <p class='generator_user_input'>Niklas Lampe</p>
-        <h3>Postanschrift</h3>
-        <p class='generator_user_input'>Saarburger Straße 10<br />
-        12247 Berlin</p>
-        <h3>Kontakt</h3>
-        <p>E-Mail: niklas.lampe00&#64;gmail.com</p>
-        <p>Telefon: 015114914843</p>
-        <h2>Hinweise zur Website</h2>
-        <h3>Urheberrechtliche Hinweise</h3>
-        <p class='generator_user_input'>Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten unterliegen dem deutschen Urheberrecht. Die Vervielfältigung, Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb der Grenzen des Urheberrechtes bedürfen der schriftlichen Zustimmung des jeweiligen Autors bzw. Erstellers. Downloads und Kopien dieser Seite sind nur für den privaten, nicht kommerziellen Gebrauch gestattet. Soweit die Inhalte auf dieser Seite nicht vom Betreiber erstellt wurden, werden die Urheberrechte Dritter beachtet. Insbesondere werden Inhalte Dritter als solche gekennzeichnet. Sollten Sie trotzdem auf eine Urheberrechtsverletzung aufmerksam werden, bitten wir um einen entsprechenden Hinweis. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Inhalte umgehend entfernen.</p>
-        <p><em>Dieses Impressum wurde mit Hilfe des <a href="https://www.activemind.de/generatoren/impressum/" target="_blank" rel="noopener">Impressums-Generators der activeMind AG</a> erstellt (Version 2024-07-05).</em></p>
+            <h1>{{ imprintContent.title }}</h1>
+            <h2>{{ imprintContent.responsible }}</h2>
+            <p class='generator_user_input'>{{ imprintContent.name }}</p>
+            <h3>{{ imprintContent.postal }}</h3>
+            <p class='generator_user_input' [innerHTML]="imprintContent.address"></p>
+            <h3>{{ imprintContent.contact }}</h3>
+            <p>{{ imprintContent.email }}</p>
+            <p>{{ imprintContent.phone }}</p>
+            <h2>{{ imprintContent.websiteNotes }}</h2>
+            <h3>{{ imprintContent.copyrightNotes }}</h3>
+            <p class='generator_user_input'>{{ imprintContent.copyrightText }}</p>
+            <p><em [innerHTML]="imprintContent.generatorNote"></em></p>
         </div>
-        </div>
+    </div>
 </div>
 
