--- a/src/app/privacy/privacy.component.html
+++ b/src/app/privacy/privacy.component.html
@@ -1,64 +1,79 @@
-
 <div class="privacy-main">
     <div id='generator_results'>
         <div class="privacy-text" id='generator_results_content'>
-        <h1>Datenschutzhinweise</h1>
-        <h2>Verantwortlicher</h2>
-        <p>Verantwortlicher im Sinne der Datenschutzgesetze, insbesondere der EU-Datenschutz-Grundverordnung (DSGVO), ist:</p>
-        <p class='generator_user_input'>Niklas Lampe<br />
-        Saarburger Straße 10<br />
-        1227 Berlin<br />
-        niklas.lampe00&#64;gmail.com</p>
-        <h2>Ihre Betroffenenrechte</h2>
-        <p>Unter den angegebenen Kontaktdaten können Sie gemäß EU-Datenschutz-Grundverordnung (DSGVO) jederzeit folgende Rechte ausüben:</p>
-        <ul>
-        <li>Auskunft über Ihre bei uns gespeicherten Daten und deren Verarbeitung (Art. 15 DSGVO),</li>
-        <li>Berichtigung unrichtiger personenbezogener Daten (Art. 16 DSGVO),</li>
-        <li>Löschung Ihrer bei uns gespeicherten Daten (Art. 17 DSGVO),</li>
-        <li>Einschränkung der Datenverarbeitung, sofern wir Ihre Daten aufgrund gesetzlicher Pflichten noch nicht löschen dürfen (Art. 18 DSGVO),</li>
-        <li>Widerspruch gegen die Verarbeitung Ihrer Daten bei uns (Art. 21 DSGVO) und</li>
-        <li>Datenübertragbarkeit, sofern Sie in die Datenverarbeitung eingewilligt haben oder einen Vertrag mit uns abgeschlossen haben (Art. 20 DSGVO).</li>
-        </ul>
-        <p>Sofern Sie uns eine Einwilligung erteilt haben, können Sie diese jederzeit mit Wirkung für die Zukunft widerrufen.</p>
-        <p>Sie können sich jederzeit mit einer Beschwerde an eine Aufsichtsbehörde wenden, z. B. an die zuständige Aufsichtsbehörde des Bundeslands Ihres Wohnsitzes oder an die für uns als verantwortliche Stelle zuständige Behörde.</p>
-        <p>Eine Liste der Aufsichtsbehörden (für den nichtöffentlichen Bereich) mit Anschrift finden Sie unter: <a href="https://www.bfdi.bund.de/DE/Infothek/Anschriften_Links/anschriften_links-node.html">https://www.bfdi.bund.de/DE/Infothek/Anschriften_Links/anschriften_links-node.html</a>.</p>
-        <h2>Verarbeitungstätigkeit</h2>
-        <h3>Kontaktaufnahme</h3>
-        <p>Art und Zweck der Verarbeitung</p>
-        <p>Auf unserer Website ist ein Kontaktformular vorhanden, welches für die elektronische Kontaktaufnahme genutzt werden kann. Nimmt ein Nutzer diese Möglichkeit wahr, so werden die in der Eingabemaske eingegeben Daten an uns übermittelt und gespeichert.</p>
-        <p>Zum Zeitpunkt der Absendung der Nachricht werden zudem folgende Daten gespeichert:</p>
-        <ul>
-        <li>Datum und Uhrzeit der Anfrage</li>
-        </ul>
-        <p>Eine Kontaktaufnahme ist über die bereitgestellten E-Mail-Adressen möglich. In diesem Fall werden die mit der E-Mail übermittelten personenbezogenen Daten des Nutzers gespeichert. Hierzu zählen Datum und Uhrzeit des E-Mailversands, E-Mailadresse, IP-Adressen sowie Informationen zu den an der E-Mail-Kommunikation beteiligten Servern.</p>
-        <p>Unabhängig von der gewählten Kommunikationsart erheben wir den Inhalt Ihrer Anfrage. Ihre Daten werden zum Zweck der individuellen Kommunikation mit Ihnen gespeichert.</p>
-        <h4>Rechtsgrundlage</h4>
-        <p>Die Verarbeitung der Daten erfolgt auf der Grundlage eines berechtigten Interesses (Art. 6 Abs. 1 lit. f DSGVO).</p>
-        <p>Unser berechtigtes Interesse an der Verarbeitung Ihrer Daten ist die Ermöglichung einer unkomplizierten Kontaktaufnahme.</p>
-        <p>Sofern Sie mit uns Kontakt aufnehmen, um ein Angebot zu erfragen, erfolgt die Verarbeitung der Daten zur Durchführung vorvertraglicher Maßnahmen (Art. 6 Abs. 1 lit. b DSGVO).</p>
-        <h4>Empfänger</h4>
-        <p>Empfänger der Daten sind ggf. technische Dienstleister, die für den Betrieb und die Wartung unserer Webseite als Auftragsverarbeiter tätig werden.</p>
-        <h4>Speicherdauer</h4>
-        <p>Daten werden spätestens sechs Monate nach Bearbeitung der Kontaktaufnahme gelöscht.</p>
-        <p>Sofern es zu einem Vertragsverhältnis kommt, unterliegen wir den gesetzlichen Aufbewahrungsfristen. Diese betragen grundsätzlich 6 oder 10 Jahre aus Gründen der ordnungsmäßigen Buchführung und steuerrechtlichen Anforderungen.</p>
-        <h4>Bereitstellung vorgeschrieben oder erforderlich</h4>
-        <p>Die Bereitstellung Ihrer personenbezogenen Daten erfolgt freiwillig. Wir können Ihre Anfrage jedoch nur bearbeiten, sofern Sie uns die erforderlichen Daten und den Grund der Anfrage mitteilen.</p>
-        <h4>Widerspruch</h4>
-        <p>Lesen Sie dazu die Informationen über Ihr Widerspruchsrecht nach Art. 21 DSGVO weiter unten.</p>
-        <h2>Information über Ihr Widerspruchsrecht nach Art. 21 DSGVO</h2>
-        <h3>Einzelfallbezogenes Widerspruchsrecht</h3>
-        <p>Sie haben das Recht, aus Gründen, die sich aus Ihrer besonderen Situation ergeben, jederzeit gegen die Verarbeitung Sie betreffender personenbezogener Daten, die aufgrund Art. 6 Abs. 1 lit. f DSGVO (Datenverarbeitung auf der Grundlage einer Interessenabwägung) erfolgt, Widerspruch einzulegen; dies gilt auch für ein auf diese Bestimmung gestütztes Profiling im Sinne von Art. 4 Nr. 4 DSGVO.</p>
-        <p>Legen Sie Widerspruch ein, werden wir Ihre personenbezogenen Daten nicht mehr verarbeiten, es sei denn, wir können zwingende schutzwürdige Gründe für die Verarbeitung nachweisen, die Ihre Interessen, Rechte und Freiheiten überwiegen, oder die Verarbeitung dient der Geltendmachung, Ausübung oder Verteidigung von Rechtsansprüchen.</p>
-        <h3>Empfänger eines Widerspruchs</h3>
-        <p class='generator_user_input'>Niklas Lampe<br />
-        niklas.lampe00&#64;gmail.com</p>
-        <h2>Änderung unserer Datenschutzerklärung</h2>
-        <p>Wir behalten uns vor, diese Datenschutzerklärung anzupassen, damit sie stets den aktuellen rechtlichen Anforderungen entspricht oder um Änderungen unserer Leistungen in der Datenschutzerklärung umzusetzen, z.B. bei der Einführung neuer Services. Für Ihren erneuten Besuch gilt dann die neue Datenschutzerklärung.</p>
-        <h2>Fragen zum Datenschutz</h2>
-        <p>Wenn Sie Fragen zum Datenschutz haben, schreiben Sie uns bitte eine E-Mail an den oben genannten Verantwortlichen.</p>
-        <h2>Urheberrechtliche Hinweise</h2>
-        <p><em>Diese Datenschutzerklärung wurde mit Hilfe der activeMind AG erstellt – den Experten für <a href="https://www.activemind.de/datenschutz/datenschutzbeauftragter/" target="_blank" rel="noopener dofollow">externe Datenschutzbeauftragte</a> (Version #2024-10-25).</em></p>
+            <h1>{{ privacyContent.title }}</h1>
+            <h2>{{ privacyContent.responsible }}</h2>
+            <p>{{ privacyContent.responsibleText }}</p>
+            <p class='generator_user_input'>
+                {{ privacyContent.name }}<br />
+                {{ privacyContent.address }}<br />
+                {{ privacyContent.email }}
+            </p>
+            
+            <h2>{{ privacyContent.rightsTitle }}</h2>
+            <p>{{ privacyContent.rightsText }}</p>
+            <ul>
+                <li>{{ privacyContent.rightsList[0] }}</li>
+                <li>{{ privacyContent.rightsList[1] }}</li>
+                <li>{{ privacyContent.rightsList[2] }}</li>
+                <li>{{ privacyContent.rightsList[3] }}</li>
+                <li>{{ privacyContent.rightsList[4] }}</li>
+                <li>{{ privacyContent.rightsList[5] }}</li>
+            </ul>
+            <p>{{ privacyContent.rightsNote }}</p>
+            <p>{{ privacyContent.rightsComplaint }}</p>
+            <p>{{ privacyContent.rightsAuthorities }} <a href="https://www.bfdi.bund.de/DE/Infothek/Anschriften_Links/anschriften_links-node.html">https://www.bfdi.bund.de/DE/Infothek/Anschriften_Links/anschriften_links-node.html</a>.</p>
+
+            <h2>{{ privacyContent.processingTitle }}</h2>
+            <h3>{{ privacyContent.contactTitle }}</h3>
+            <p>{{ privacyContent.processingType }}</p>
+            <p>{{ privacyContent.processingText }}</p>
+            <p>{{ privacyContent.processingStoredData }}</p>
+            <ul>
+                <li>{{ privacyContent.processingStoredList[0] }}</li>
+            </ul>
+            <p>{{ privacyContent.emailProcessing }}</p>
+            <p>{{ privacyContent.communicationPurpose }}</p>
+
+            <h4>{{ privacyContent.legalBasisTitle }}</h4>
+            <p>{{ privacyContent.legalBasisText }}</p>
+            <p>{{ privacyContent.legalBasisReason }}</p>
+            <p>{{ privacyContent.contractBasis }}</p>
+
+            <h4>{{ privacyContent.recipientsTitle }}</h4>
+            <p>{{ privacyContent.recipientsText }}</p>
+
+            <h4>{{ privacyContent.storageDurationTitle }}</h4>
+            <p>{{ privacyContent.storageDurationText }}</p>
+            <p>{{ privacyContent.legalRetentionText }}</p>
+
+            <h4>{{ privacyContent.provisionTitle }}</h4>
+            <p>{{ privacyContent.provisionText }}</p>
+
+            <h4>{{ privacyContent.objectionTitle }}</h4>
+            <p>{{ privacyContent.objectionText }}</p>
+
+            <h2>{{ privacyContent.objectionRightTitle }}</h2>
+            <h3>{{ privacyContent.objectionRightSubTitle }}</h3>
+            <p>{{ privacyContent.objectionRightText }}</p>
+            <p>{{ privacyContent.objectionRightConsequence }}</p>
+
+            <h3>{{ privacyContent.objectionRecipientTitle }}</h3>
+            <p class='generator_user_input'>
+                {{ privacyContent.objectionRecipientText }} <br>
+                {{ privacyContent.objectionRecipientTextTwo }}
+            </p>
+
+            <h2>{{ privacyContent.changesTitle }}</h2>
+            <p>{{ privacyContent.changesText }}</p>
+
+            <h2>{{ privacyContent.questionsTitle }}</h2>
+            <p>{{ privacyContent.questionsText }}</p>
+
+            <h2>{{ privacyContent.copyrightNoticeTitle }}</h2>
+            <p><em>{{ privacyContent.copyrightNoticeText }} <a href="https://www.activemind.de/datenschutz/datenschutzbeauftragter/" target="_blank" rel="noopener dofollow">{{ privacyContent.externalDataProtection }}</a> (Version #2024-10-25).</em></p>
         </div>
-        </div>
+    </div>
 </div>
+
 
