--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -19,7 +19,7 @@
         </a>
         <img
           (click)="scrollToContact()"
-          class="icon"
+          class="icon mail"
           src="./../../../assets/mail.png"
           alt=""
         />
