--- a/src/app/projects/single-project/single-project.component.scss
+++ b/src/app/projects/single-project/single-project.component.scss
@@ -298,13 +298,13 @@
   .project-info {
     padding-top: 20px;
     padding-left: 0px;
-    transform: translateY(50px) !important; /* Start below */
+    transform: translateY(50px) !important; 
     opacity: 0;
     transition: transform 0.5s ease, opacity 0.5s ease;
   }
 
   .project-main:hover .project-info {
-    transform: translateY(0) !important; /* Move up into place */
+    transform: translateY(0) !important; 
     opacity: 1;
   }
 
