--- a/src/app/my-skills/my-skills.component.html
+++ b/src/app/my-skills/my-skills.component.html
@@ -67,7 +67,9 @@
         </div>
       </div>
       <div class="skill-learn">
+        <div class="single-skill">
         <img class="learn-icon" src="./../../assets/skills/learning.png" alt="" />
+      </div>
         <p>
           {{ learnMoreText }} <a (click)="scrollToContact()">{{ contactMeText }}</a>. {{ alwaysReadyText }}
         </p>
