implemented: animation on scroll for small screens,  scroll behavior now takes sticky header into consideration, small responsive fixes

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,6 +1,6 @@
-<div id="about-me" class="about-me-main">
+<div class="about-me-main">
   <div>
-    <h1>{{ content.header }}</h1>
+    <h1 id="about-me">{{ content.header }}</h1>
   </div>
   <div class="about-me-content">
     <div class="about-me-content-left">
@@ -26,6 +26,6 @@
     </div>
   </div>
   <div class="arrow-div">
-    <app-arrow-section id="skills"></app-arrow-section>
+    <app-arrow-section></app-arrow-section>
   </div>
 </div>
