--- a/src/app/arrow-section/arrow-section.component.html
+++ b/src/app/arrow-section/arrow-section.component.html
@@ -1,10 +1,9 @@
-<div class="arrow-section" (mouseenter)="startAnimation()">
-    <div>
-      <img 
-        [src]="currentImage" 
-        alt="Arrow" 
-        [ngStyle]="isLastImage ? { 'padding-top': '65px', 'padding-right': '65px' } : {}" 
-      />
-    </div>
+<div class="arrow-section" #arrowSection (mouseenter)="startAnimation()">
+  <div>
+    <img 
+      [src]="currentImage" 
+      alt="Arrow" 
+      [ngStyle]="isLastImage ? { 'padding-top': '65px', 'padding-right': '65px' } : {}" 
+    />
   </div>
-  
+</div>
