--- a/src/app/my-skills/my-skills.component.html
+++ b/src/app/my-skills/my-skills.component.html
@@ -1,4 +1,4 @@
-<div class="skills-arrow-div">
+<div class="skills-arrow-div" id="skills">
 <div  class="skills-main">
   <h1  >My Skills</h1>
   <div class="skills-content">
@@ -78,6 +78,6 @@
   </div>
 </div>
 <div class="arrow-div">
-  <app-arrow-section id="projects" class="arrow-sec"></app-arrow-section>
+  <app-arrow-section class="arrow-sec"></app-arrow-section>
 </div>
 </div>
