--- a/src/app/references/references.component.html
+++ b/src/app/references/references.component.html
@@ -8,6 +8,6 @@
         </app-single-reference>
     </div>
 </div>
-<div class="arrow-div" id="contact">
+<div class="arrow-div">
     <app-arrow-section class="arrow-sec"></app-arrow-section>
   </div>
