fixed imprint and privacy link behavior, contact button scroll behavior

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -82,12 +82,8 @@
         />
         <p>
           {{ privacyTextParts.one }}
-          <a
-            href="/privacy"
-            target="_blank"
-            rel="noopener noreferrer"
-            >{{ privacyTextParts.policy }}</a
-          >
+          <a [routerLink]="'/privacy'"  rel="noopener noreferrer">{{ privacyTextParts.policy }}</a>
+
           {{ privacyTextParts.two }}
         </p>
       </div>
