--- a/src/app/imprint/imprint.component.scss
+++ b/src/app/imprint/imprint.component.scss
@@ -11,6 +11,7 @@
     align-items: flex-start;
     background-color: #FFFCF3;
     font-family: 'overpass';
+    min-height: 70vh;
 }
 
 h1, h2, h3{
