--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -24,7 +24,7 @@
           alt=""
         />
       </div>
-      <a class="imprint" (click)="openImprint($event)">{{ imprintText }}</a>
+      <a class="imprint"  [routerLink]="'/imprint'">{{ imprintText }}</a>
     </div>
   </div>
 </footer>
