added on scroll animation to more components on small devices, edited scss of success message for better visibility

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -21,7 +21,7 @@
         <button (click)="scrollToContact()">{{ content.button }}</button>
       </div>
     </div>
-    <div class="image-container">
+    <div class="image-container" #imageContainer>
       <img class="personal-img" src="./../../../assets/personalimg.png" alt="" />
     </div>
   </div>
