--- a/src/app/contact/contact-respo.component.scss
+++ b/src/app/contact/contact-respo.component.scss
@@ -34,6 +34,10 @@
     textarea, .input-div {
       width: 462.75px;
     }
+
+    .success-message{
+      max-width: 420px;
+    }
   
     p{
       max-width: 420px;
@@ -54,6 +58,10 @@
     input[type="email"],
     textarea, .input-div {
       width: 347px;
+    }
+
+    .success-message{
+      max-width: 300px;
     }
   
     p {
@@ -90,6 +98,10 @@
     textarea,.input-div {
       width: 280px;
     }
+
+    .success-message{
+      max-width: 240px;
+    }
   
     p{
       max-width: 250px;
@@ -115,6 +127,10 @@
     input[type="email"],
     textarea,.input-div {
       width: 250px;
+    }
+
+    .success-message{
+      max-width: 200px;
     }
   
     p{
