--- a/src/app/my-skills/my-skills.component.html
+++ b/src/app/my-skills/my-skills.component.html
@@ -2,7 +2,7 @@
 <div  class="skills-main">
   <h1  >My Skills</h1>
   <div class="skills-content">
-    <div class="skills-icons">
+    <div class="skills-icons" #skillsSection>
       <div class="skills-row-one">
         <div class="single-skill">
           <img class="skill-icon" src="./../../assets/skills/html.png" alt="" />
