added personalimg, fixed little bug with animation on scroll

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -22,7 +22,7 @@
       </div>
     </div>
     <div class="image-container" #imageContainer>
-      <img class="personal-img" src="./../../../assets/personalimg.png" alt="" />
+      <img class="personal-img" src="./../../assets/personalimgcut.png" alt="" />
     </div>
   </div>
   <div class="arrow-div">
