--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -75,10 +75,10 @@
     border: none;
     transition: all 0.1s ease;
     &:hover {
-        width: 260px;
-        height: 70px;
-        font-weight: bold;
-      }
+      width: 260px;
+      height: 70px;
+      font-weight: bold;
+    }
   }
 }
 
@@ -91,167 +91,173 @@ h1 {
 }
 
 .personal-img {
-  width: 533px;
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  object-position: top;
 }
+
 .image-container {
-    position: relative; 
-    display: inline-block; 
-  }
-  
-  .image-container img {
-    display: block; 
-  }
-  
-  .image-container::after {
-    content: '';
-    position: absolute;
-    top: 16px; 
-    left: 16px; 
-    right: -16px; 
-    bottom: -16px;
-    border: 4px solid rgb(0, 0, 0); 
-    opacity: 0; 
-    transition: opacity 0.3s ease; 
-    pointer-events: none; 
+  width: 533px;
+  height: 533px;
+  position: relative;
+  display: inline-block;
+}
+
+.image-container img {
+  display: block;
+}
+
+.image-container::after {
+  content: "";
+  position: absolute;
+  top: 16px;
+  left: 16px;
+  right: -16px;
+  bottom: -16px;
+  border: 4px solid rgb(0, 0, 0);
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  pointer-events: none;
+}
+
+.image-container.show-border::after {
+  opacity: 1;
+}
+
+.image-container:hover::after {
+  opacity: 1;
+}
+
+.arrow-div {
+  width: 100%;
+  max-width: 1259px;
+}
+
+@media (max-width: 1450px) {
+  .about-me-main {
+    width: 1000px;
   }
 
-  .image-container.show-border::after {
-    opacity: 1;
-  }
-  
-  .image-container:hover::after {
-    opacity: 1; 
+  h1 {
+    font-size: 62px;
   }
 
-  .arrow-div{
+  .about-me-paragraph {
+    width: 489px;
+  }
+
+  .personal-img {
+    width: 426px;
+  }
+
+  .image-container {
+    width: 426px;
+    height: 426px;
+  }
+}
+
+@media (max-width: 1150px) {
+  .about-me-main {
+    width: 750px;
+    padding-top: 0px;
+  }
+
+  h1 {
+    font-size: 46px;
+  }
+
+  .about-me-paragraph {
+    width: 366px;
+  }
+
+  .personal-img {
+    width: 319.5px;
+  }
+
+  .image-container {
+    width: 319.5px;
+    height: 319.5px;
+  }
+}
+
+@media (max-width: 900px) {
+  .about-me-main {
+    width: 600px;
+  }
+
+  h1 {
+    font-size: 36px;
+  }
+
+  .about-me-paragraph {
+    width: 292px;
+    font-size: 16px;
+  }
+
+  .personal-img {
+    width: 255.5px;
+  }
+
+  .image-container {
+    width: 255.5px;
+    height: 255.5px;
+  }
+}
+
+@media (max-width: 660px) {
+  .about-me-main {
+    width: 320px;
+    align-items: center;
+  }
+  .about-me-main {
+    align-items: center;
+  }
+
+  .about-me-content {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .about-me-btn-div {
+    margin-bottom: 24px;
+  }
+
+  .arrow-div {
     width: 100%;
-    max-width: 1259px;
+    max-width: 320px;
+    display: flex;
+    justify-content: center;
   }
 
-  @media (max-width: 1450px) {
-    .about-me-main{
-      width:1000px
-    }
-
-    h1{
-      font-size: 62px;
-    }
-
-    .about-me-paragraph{
-      width: 489px;
-    }
-
-    .personal-img{
-      width: 426px;
-    }
-
-    .image-container{
-      width: 426px;
-      height: 426px;
-    }
+  h1 {
+    font-size: 26px;
   }
 
-  @media (max-width: 1150px) {
-    .about-me-main{
-      width: 750px;
-      padding-top: 0px;
-    }
-
-    h1{
-      font-size: 46px;
-    }
-
-    .about-me-paragraph{
-      width: 366px;
-    }
-
-    .personal-img{
-      width: 319.5px;
-    }
-
-    .image-container{
-      width: 319.5px;
-      height: 319.5px;
-    }
+  .about-me-paragraph {
+    width: 266px;
   }
 
-  @media (max-width: 900px) {
-    .about-me-main{
-      width: 600px;
-    }
-
-    h1{
-      font-size: 36px;
-    }
-
-    .about-me-paragraph{
-      width: 292px;
-      font-size: 16px;
-    }
-
-    .personal-img{
-      width: 255.5px;
-    }
-
-    .image-container{
-      width: 255.5px;
-      height: 255.5px;
-    }
+  .about-me-content-left {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
-  
-  @media (max-width: 660px) {
-    .about-me-main{
-      width: 320px;
-      align-items: center;
-    }
-    .about-me-main {
-      align-items: center;
-    }
-    
-    .about-me-content {
-      flex-direction: column;
-      align-items: center;
-    }
-    
-    .about-me-btn-div{
-      margin-bottom: 24px;
-    }
-    
-    .arrow-div{
-      width: 100%;
-      max-width: 320px;
-      display: flex;
-      justify-content: center;
-    }
 
-    h1{
-      font-size: 26px;
-    }
-
-    .about-me-paragraph{
-      width: 266px;
-    }
-
-    .about-me-content-left{
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-
-    .about-me-based{
-      font-size: 16px;
-    }
-
-    .about-me-remote{
-      font-size: 16px;
-    }
-
-    .personal-img{
-      width: 245.5px;
-    }
-
-    .image-container{
-      width: 245.5px;
-      height: 245.5px;
-    }
+  .about-me-based {
+    font-size: 16px;
   }
+
+  .about-me-remote {
+    font-size: 16px;
+  }
+
+  .personal-img {
+    width: 245.5px;
+  }
+
+  .image-container {
+    width: 245.5px;
+    height: 245.5px;
+  }
+}
