css fixes, language service saves to local storage, improved mail links and scroll arrow animation

--- a/src/app/atf/atf.component.html
+++ b/src/app/atf/atf.component.html
@@ -11,7 +11,7 @@
     </div>
     <div class="bottom-atf">
         <div class="atf-mail">
-            <p>niklas.lampe00&#64;gmail.com</p>
+            <p><a (click)="scrollToContact()">niklas.lampe00&#64;gmail.com</a></p>
         </div>
         <div class="atf-arrow">
             <img class="animated-arrow" [src]="currentImage" alt="">
