--- a/src/app/atf/atf.component.scss
+++ b/src/app/atf/atf.component.scss
@@ -85,6 +85,15 @@
   }
 }
 
+a{
+  text-decoration: none;
+  cursor: pointer;
+  color: black;
+  &:hover{
+    color: $highlight_color;
+  }
+}
+
 .animated-arrow {
   transition: all 0.25s ease-in-out;
 }
