--- a/src/app/imprint/imprint.component.scss
+++ b/src/app/imprint/imprint.component.scss
@@ -1,36 +1,50 @@
-.imprint-main{
-    width: 100%;
-    height: auto;
-    max-width: 1259px;
-    padding-top: 100px;
-    padding-bottom: 100px;
-    margin: 0 auto;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: flex-start;
-    background-color: #FFFCF3;
-    font-family: 'overpass';
-    min-height: 70vh;
+.imprint-main {
+  width: 100%;
+  height: auto;
+  max-width: 1259px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: flex-start;
+  background-color: #fffcf3;
+  font-family: "overpass";
+    min-height: 90vh;
 }
 
-h1, h2, h3{
-    font-family: 'syne800';
+h1,
+h2,
+h3 {
+  font-family: "syne800";
 }
 
+.imprint-text {
+  margin-left: 30px;
+  margin-right: 30px;
+  margin-bottom: 158px;
+}
 
 @media (max-width: 400px) {
-    .imprint-main{
-        max-width: 320px;
-    }
-
-    .imprint-text{
-        max-width: 320px;
-    }
-
-    h1, h2, h3{
-        font-size: 20px;
-    }
-    
+  .imprint-main {
+    max-width: 320px;
   }
-  
+
+  .imprint-text {
+    max-width: 320px;
+  }
+
+  h1,
+  h2,
+  h3 {
+    font-size: 20px;
+  }
+}
+
+@media (min-width: 1000px) {
+    .imprint-main {
+      height: 100%;
+      margin-bottom: -158px;
+    }
+  }
+
+
