--- a/src/app/privacy/privacy.component.scss
+++ b/src/app/privacy/privacy.component.scss
@@ -16,6 +16,11 @@ h1, h2, h3{
     font-family: 'syne800';
 }
 
+.privacy-text{
+    margin-left: 30px;
+    margin-right: 30px;
+}
+
 @media (max-width: 600px) {
     .privacy-main{
         max-width: 400px;
@@ -23,6 +28,8 @@ h1, h2, h3{
 
     .privacy-text{
         max-width: 400px;
+        margin-left: 0px;
+        margin-right: 0px;
         >p{
             >a{
                 max-width: 400px;
@@ -40,13 +47,13 @@ h1, h2, h3{
 
 @media (max-width: 420px) {
     .privacy-main{
-        max-width: 300px;
+        max-width: 280px;
     }
 
     .privacy-text{
-        max-width: 300px;
+        max-width: 280px;
         >a{
-            max-width: 300px;
+            max-width: 280px;
         }
     }
 
@@ -54,4 +61,10 @@ h1, h2, h3{
         font-size: 16px;
     }
     
+  }
+
+  @media(min-width: 3000px){
+    .privacy-main{
+        height: 100%;
+    }
   }
