--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -14,7 +14,7 @@
       <h2>{{ h2Text }}</h2>
       <h3>{{ h3Text }}</h3>
     </div>
-    <div class="input-div">
+    <div class="input-div" id="input-div">
       <input
         placeholder="{{ placeholders.name }}"
         type="text"
