--- a/src/app/privacy/privacy.component.scss
+++ b/src/app/privacy/privacy.component.scss
@@ -1,15 +1,14 @@
 .privacy-main{
     width: 100%;
     max-width: 1259px;
-    padding-top: 100px;
-    padding-bottom: 100px;
+    margin-top: 100px !important;
+    margin-bottom: 158px !important;
     margin: 0 auto;
     display: flex;
-    justify-content: center;
     flex-direction: column;
     align-items: flex-start;
     background-color: #FFFCF3;
-    font-family: 'overpass';
+    font-family: 'overpass'; 
 }
 
 h1, h2, h3{
@@ -60,11 +59,14 @@ h1, h2, h3{
     h1, h2, h3{
         font-size: 16px;
     }
-    
   }
 
-  @media(min-width: 3000px){
-    .privacy-main{
-        height: 100%;
+
+  @media (min-height: 2500px) {
+    .privacy-main {
+      min-height: 100%;
+      margin-bottom: -158px;
     }
   }
+
+
